Cleanup unused and commented staff after remove GraalVM